Fixing alignment of title

--- a/client/src/pages/BookPage.module.scss
+++ b/client/src/pages/BookPage.module.scss
@@ -4,14 +4,6 @@
 .navbarBrandContainer {
     align-items: center;
 }
-h2 {
-    margin-top: 32px;
-    text-align: left;
-}
-
-header {
-    padding-left: auto;
-}
 .text {
     font-size: 20px;
 }
@@ -28,4 +20,14 @@ button {
     margin-top: 32px;
     padding: 0 32px 0 32px;
     max-width: 800px;
+}
+
+.arrowIcon {
+    margin-left: 11px;
+}
+
+.bookPageHeaderContainer {
+   margin: auto;
+   width: 800px;
+   padding: 32px 32px 0 32px;
 }
